# sticky-encoding

./: .codecov.yml  .gitignore  .jazzy.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Gemfile  Package.swift  Package.xcconfig  README.md  StickyEncoding.podspec
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
Documentation/: StickyEncoding.md
Documentation/Sections/: Binary Format.md
Sources/: CMakeLists.txt
Sources/Documentation/Abstracts/: EncodedData Transformation.md  Encoding & Decoding.md  Supplemental Information.md
Sources/Documentation/Index/: Index.md
Sources/Documentation/Sections/: Binary Format Diagram.cddz  Binary Format.md
Sources/StickyEncoding/: BinaryDecoder.swift  BinaryEncoder.swift  BinaryEncodingKey.swift  CodingKey+Extensions.swift  DecodingError+Extensions.swift  EncodedData.swift  EncodedType.swift  KeyedStorageContainer.swift  MemoryAlignment.swift  NullStorageContainer.swift  PassthroughReference.swift  SingleValueContainer.swift  StorageContainer.swift  StorageContainerReaderWriter.swift  StrorageContainerReference.swift  UnkeyedStorageContainer.swift
Tests/: CMakeLists.txt  LinuxMain.swift
Tests/StickyEncodingTests/: BinaryCodingKeyTests.swift  BinaryDecoder+ByteArrayTests.swift  BinaryDecoderNegativeTests.swift  BinaryEncoder+ByteArrayTests.swift  BinaryEncoderNegativeTests.swift  BinaryEncodingKeyedContainerNegativeTests.swift  BinaryEncodingKeyedContainerNegativeTests.swift.gyb  BinaryEncodingKeyedContainerTests.swift  BinaryEncodingKeyedContainerTests.swift.gyb  BinaryEncodingSingleValueContainerNegativeTests.swift  BinaryEncodingSingleValueContainerNegativeTests.swift.gyb  BinaryEncodingSingleValueContainerTests.swift  BinaryEncodingSingleValueContainerTests.swift.gyb  BinaryEncodingStructuredTypeTests.swift  BinaryEncodingUnkeyedContainerNegativeTests.swift  BinaryEncodingUnkeyedContainerNegativeTests.swift.gyb  BinaryEncodingUnkeyedContainerTests.swift  BinaryEncodingUnkeyedContainerTests.swift.gyb  BinaryEncodingUserInfoTests.swift  ByteArrayTests.swift  DecodingError+ExtensionsTests.swift  DocumentationExampleTests.swift  EncodeDecodeTester.swift  EncodedData+NegativeTests.swift  EncodedDataTests.swift  EncodedTypeTests.swift  EncodedTypeTests.swift.gyb  FoundationTests.swift  KeyedStorageContainerTests.swift  SingleValueContainerTests.swift  SingleValueContainerTests.swift.gyb  StorageContainer+Equal.swift  StorageContainer+EqualTests.swift  StorageContainerReaderWriterTests.swift  StorageContainerReferenceTests.swift  StorageContainerTests.swift  UnkeyedStorageContainerTests.swift  XCTestManifests.swift
docs/: Encoding & Decoding.html  binary-format.html  index.hml  index.html  search.json  undocumented.json
docs/Classes/: BinaryDecoder.html  BinaryEncoder.html
docs/Extensions/: Array.html
docs/docsets/: StickyEncoding.tgz
docs/docsets/StickyEncoding.docset/Contents/: Info.plist
docs/docsets/StickyEncoding.docset/Contents/Resources/: docSet.dsidx
docs/docsets/StickyEncoding.docset/Contents/Resources/Documents/: EncodedData Transformation.html  Supplemental Information.html  binary-format.html  search.json
docs/docsets/StickyEncoding.docset/Contents/Resources/Documents/Classes/: BinaryDecoder.html  EncodedData.html
docs/docsets/StickyEncoding.docset/Contents/Resources/Documents/Extensions/: Data.html
